--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "dayjs": "^1.11.10",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
+    "react-chat-bubble": "^0.8.7",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.16.0"
   },
