--- a/client/package.json
+++ b/client/package.json
@@ -17,11 +17,12 @@
     "@mui/x-date-pickers": "^6.16.0",
     "axios": "^1.5.1",
     "dayjs": "^1.11.10",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
-    "react-spinners": "^0.13.8",
-    "react-router-dom": "^6.16.0"
+    "react-router-dom": "^6.16.0",
+    "react-spinners": "^0.13.8"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
